--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous">
-        <link rel="stylesheet" href="guess_number.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
 
@@ -76,7 +76,7 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
 
-        <script src="guess_number.js"></script>
+        <script src="index.js"></script>
 
     </body>
 </html>
