--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4-Day Friends Getaway: Lonavala & Imagica</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <!-- Landing Section -->
@@ -316,7 +316,7 @@
             });
         });
     </script>
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
 
   </body>
 </html>
